ecmascript/parser/tests/test262-error-references/fail/40449ddc6ec37b35.js.stderr
error: Expected Semi
 --> $DIR/tests/test262-parser/fail/40449ddc6ec37b35.js:1:9
  |
1 | () => {}()
  |         ^

